fix(store/wanted-item): reduce item dimensions to avoid wrapping

--- a/src/client/assets/javascripts/features/store/components/wanted/WantedItem/WantedItem.scss
+++ b/src/client/assets/javascripts/features/store/components/wanted/WantedItem/WantedItem.scss
@@ -20,7 +20,7 @@ div.wanted-item {
 
   div.wanted-props {
     text-align: center;
-    width: 150px;
+    width: 140px;
     div.wanted-title {
       white-space: nowrap;
       overflow: hidden;
